# healthcare-agent

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
client/: Dockerfile.dev  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/lib/: api.ts
db/data/: 001_init.sql  002_seed.sql  003_alter_doctors.sql  004_audit_logs.sql  005_doctor_covering_index.sql  006_google_oauth.sql
scripts/: generate_data.py
server/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  alembic.ini  main.py  pyproject.toml
server/db/: database.py  schema.py
server/middleware/: audit.py
server/migrations/: env.py
server/migrations/versions/: 21704ba91319_initial_schema.py  4f8a2c1d9b3e_add_dashboard_indexes.py  b2f1c0a7d3e2_seed_demo_data.py
server/models/: agents.py  auth.py  enums.py  notes.py  patients.py
server/rag/: rag_service.py
server/repositories/: base_repository.py  clinical_notes_repository.py  dashboard_repository.py  diagnosis_repository.py  lab_result_repository.py  medication_repository.py  patient_repository.py  visit_repository.py  vital_signs_repository.py
server/routers/: agents.py  auth.py  dashboard.py  google_auth.py  patients.py
server/services/: agent_service.py  google_calendar_service.py  patient_service.py  report_service.py
server/templates/: visit_report.html
server/utils/: auth.py  authz.py  cache.py  csrf.py  langfuse_client.py  openai_client.py
(+76 files in other folders)
